--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -6,6 +6,7 @@ substitutions:
 
 steps:
   - name: gcr.io/cloud-builders/docker
+    dir: "backend"
     args:
       - build
       - -t
@@ -13,6 +14,7 @@ steps:
       - .
 
   - name: gcr.io/cloud-builders/docker
+    dir: "backend"
     args:
       - push
       - "us-central1-docker.pkg.dev/${_PROJECT_ID}/gemini-docker-repo/gemini-app"
