--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -3,37 +3,34 @@ options:
 
 substitutions:
   _PROJECT_ID: "${PROJECT_ID}"
+  _GEMINI_API_KEY: "${_GEMINI_API_KEY}"
+  _GEMINI_MODEL: "${_GEMINI_MODEL}"
 
 steps:
   - name: gcr.io/cloud-builders/docker
-    dir: "backend"
-    args:
-      - build
-      - -t
-      - "us-central1-docker.pkg.dev/${_PROJECT_ID}/gemini-docker-repo/gemini-app"
-      - .
+    args: [
+      "build",
+      "-f", "backend/Dockerfile",
+      "-t", "us-central1-docker.pkg.dev/${_PROJECT_ID}/gemini-docker-repo/gemini-app",
+      "."
+    ]
 
   - name: gcr.io/cloud-builders/docker
-    dir: "backend"
-    args:
-      - push
-      - "us-central1-docker.pkg.dev/${_PROJECT_ID}/gemini-docker-repo/gemini-app"
+    args: [
+      "push",
+      "us-central1-docker.pkg.dev/${_PROJECT_ID}/gemini-docker-repo/gemini-app"
+    ]
 
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk
     entrypoint: gcloud
-    args:
-      - run
-      - deploy
-      - gemini-app
-      - --image
-      - "us-central1-docker.pkg.dev/${_PROJECT_ID}/gemini-docker-repo/gemini-app"
-      - --region
-      - us-central1
-      - --platform
-      - managed
-      - --allow-unauthenticated
-      - --set-env-vars
-      - "GEMINI_API_KEY=$_GEMINI_API_KEY,GEMINI_MODEL=$_GEMINI_MODEL"
+    args: [
+      "run", "deploy", "gemini-app",
+      "--image", "us-central1-docker.pkg.dev/${_PROJECT_ID}/gemini-docker-repo/gemini-app",
+      "--region", "us-central1",
+      "--platform", "managed",
+      "--allow-unauthenticated",
+      "--set-env-vars", "GEMINI_API_KEY=${_GEMINI_API_KEY},GEMINI_MODEL=${_GEMINI_MODEL}"
+    ]
 
 images:
   - "us-central1-docker.pkg.dev/${_PROJECT_ID}/gemini-docker-repo/gemini-app"
