--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,14 @@
+
 FROM python:3.10-slim
+
 WORKDIR /app
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+
 COPY . .
+
 ENV PORT=8080 PYTHONUNBUFFERED=1
 EXPOSE 8080
-CMD ["gunicorn","--bind",":$PORT","app:app"]
+
+CMD exec gunicorn --bind :$PORT app:app
