--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 ENV PORT=8080 PYTHONUNBUFFERED=1
-EXPOSE 8080
 
-CMD exec gunicorn --bind 0.0.0.0:$PORT app:app
+# Cấu hình gunicorn bind 0.0.0.0 (mọi interface) và port từ biến môi trường
+CMD ["gunicorn", "app:app", "--bind", "0.0.0.0:${PORT}", "--workers", "1", "--timeout", "300"]
