--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,8 @@
 FROM python:3.10-slim
-
 WORKDIR /app
-
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-
 COPY . .
-
 ENV PORT=8080 PYTHONUNBUFFERED=1
-
-# Cấu hình gunicorn bind 0.0.0.0 (mọi interface) và port từ biến môi trường
-CMD ["gunicorn", "app:app", "--bind", "0.0.0.0:${PORT}", "--workers", "1", "--timeout", "300"]
+EXPOSE 8080
+CMD ["gunicorn", "--bind", "0.0.0.0:8080", "app:app"]
