--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -2,42 +2,44 @@ options:
   logging: CLOUD_LOGGING_ONLY
 
 substitutions:
+  _PROJECT_ID: "${PROJECT_ID}"
   _GEMINI_API_KEY: "${_GEMINI_API_KEY}"
   _GEMINI_MODEL: "${_GEMINI_MODEL}"
 
 steps:
-  # Build Docker image in backend folder
-  - name: gcr.io/cloud-builders/docker
-    dir: "backend"
-    args:
-      - build
-      - -t
-      - "us-central1-docker.pkg.dev/${PROJECT_ID}/gemini-docker-repo/gemini-app"
-      - .
+- name: gcr.io/cloud-builders/docker
+  args:
+    [
+      "build",
+      "-t",
+      "us-central1-docker.pkg.dev/${_PROJECT_ID}/gemini-docker-repo/gemini-app",
+      "."
+    ]
 
-  # Push image
-  - name: gcr.io/cloud-builders/docker
-    dir: "backend"
-    args:
-      - push
-      - "us-central1-docker.pkg.dev/${PROJECT_ID}/gemini-docker-repo/gemini-app"
+- name: gcr.io/cloud-builders/docker
+  args:
+    [
+      "push",
+      "us-central1-docker.pkg.dev/${_PROJECT_ID}/gemini-docker-repo/gemini-app"
+    ]
 
-  # Deploy to Cloud Run with env vars
-  - name: gcr.io/google.com/cloudsdktool/cloud-sdk
-    entrypoint: gcloud
-    args:
-      - run
-      - deploy
-      - gemini-app
-      - --image
-      - "us-central1-docker.pkg.dev/${PROJECT_ID}/gemini-docker-repo/gemini-app"
-      - --region
-      - us-central1
-      - --platform
-      - managed
-      - --allow-unauthenticated
-      - --set-env-vars
-      - "GEMINI_API_KEY=${_GEMINI_API_KEY},GEMINI_MODEL=${_GEMINI_MODEL}"
+- name: gcr.io/google.com/cloudsdktool/cloud-sdk
+  entrypoint: gcloud
+  args:
+    [
+      "run",
+      "deploy",
+      "gemini-app",
+      "--image",
+      "us-central1-docker.pkg.dev/${_PROJECT_ID}/gemini-docker-repo/gemini-app",
+      "--region",
+      "us-central1",
+      "--platform",
+      "managed",
+      "--allow-unauthenticated",
+      "--set-env-vars",
+      "GEMINI_API_KEY=${_GEMINI_API_KEY},GEMINI_MODEL=${_GEMINI_MODEL}"
+    ]
 
 images:
-  - "us-central1-docker.pkg.dev/${PROJECT_ID}/gemini-docker-repo/gemini-app"
+  - "us-central1-docker.pkg.dev/${_PROJECT_ID}/gemini-docker-repo/gemini-app"
