--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,3 +11,9 @@ pandas
 numpy
 matplotlib
 Pillow
+Flask==3.1.1
+requests==2.32.3
+PyPDF2==3.0.1
+python-docx==1.1.2
+google-cloud-storage==3.1.0
+gunicorn==20.1.0
