--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,7 @@
-flask
-requests
-PyPDF2
-python-docx
-google-cloud-storage
+fastapi
+uvicorn[standard]
 google-auth
-google-auth-oauthlib
-langchain
-openai
-pandas
-numpy
-matplotlib
-Pillow
-Flask==3.1.1
-requests==2.32.3
-PyPDF2==3.0.1
-python-docx==1.1.2
-google-cloud-storage==3.1.0
-gunicorn==20.1.0
+google-auth-transport-requests
+requests
+pdfminer.six
+python-docx
