--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -1,15 +1,18 @@
+options:
+  logging: CLOUD_LOGGING_ONLY
+
 steps:
-# Build Docker image
+
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build','-t','gcr.io/$PROJECT_ID/doc-summarizer','.']
 
-# Push image
+
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push','gcr.io/$PROJECT_ID/doc-summarizer']
 
-# Deploy to Cloud Run
+
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  entrypoint: gcloud
+  entrypoint: 'gcloud'
   args:
     - 'run'
     - 'deploy'
@@ -21,5 +24,6 @@ steps:
     - '--region'
     - 'us-central1'
     - '--allow-unauthenticated'
+
 images:
   - 'gcr.io/$PROJECT_ID/doc-summarizer'
