--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -1,31 +1,42 @@
+# cloudbuild.yaml
+serviceAccount: projects/rare-origin-458408-r0/serviceAccounts/gemini-summarizer-sa@rare-origin-458408-r0.iam.gserviceaccount.com
+
+# backend/cloudbuild.yaml
 options:
   logging: CLOUD_LOGGING_ONLY
 
 steps:
-# Bước build, chạy trong thư mục backend
+# 1) Build image
 - name: 'gcr.io/cloud-builders/docker'
-  dir: 'backend'
-  args: ['build','-t','gcr.io/$PROJECT_ID/doc-summarizer','.']
-
-# Bước push, cũng trong backend
-- name: 'gcr.io/cloud-builders/docker'
-  dir: 'backend'
-  args: ['push','gcr.io/$PROJECT_ID/doc-summarizer']
-
-# Bước deploy Cloud Run
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  entrypoint: 'gcloud'
   args:
-    - run
-    - deploy
-    - doc-summarizer
-    - --image
-    - gcr.io/$PROJECT_ID/doc-summarizer
-    - --platform
-    - managed
-    - --region
-    - us-central1
-    - --allow-unauthenticated
+    [
+      'build',
+      '-t',
+      'us-central1-docker.pkg.dev/$PROJECT_ID/doc-repo/doc-summarizer',
+      '.'
+    ]
 
+# 2) Push image lên Artifact Registry
+- name: 'gcr.io/cloud-builders/docker'
+  args:
+    [
+      'push',
+      'us-central1-docker.pkg.dev/$PROJECT_ID/doc-repo/doc-summarizer'
+    ]
+
+# 3) Deploy lên Cloud Run
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  entrypoint: 'bash'
+  args:
+    - '-c'
+    - |
+      gcloud run deploy doc-summarizer \
+        --image us-central1-docker.pkg.dev/$PROJECT_ID/doc-repo/doc-summarizer \
+        --region us-central1 \
+        --platform managed \
+        --allow-unauthenticated \
+        --set-env-vars GOOGLE_API_KEY=$$GOOGLE_API_KEY,GEMINI_MODEL=$$GEMINI_MODEL
+
+# Khai báo image để Cloud Build “đánh dấu” thành artifact
 images:
-  - 'gcr.io/$PROJECT_ID/doc-summarizer'
+  - 'us-central1-docker.pkg.dev/$PROJECT_ID/doc-repo/doc-summarizer'
