--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -10,34 +10,28 @@ steps:
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   args:
-    [
-      'build',
-      '-f', 'backend/Dockerfile',
-      '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/doc-repo/doc-summarizer',
-      'backend'
-    ]
-
-# 2) Push image lên Artifact Registry
+  - build
+  - '-t'
+  - 'us-central1-docker.pkg.dev/$PROJECT_ID/doc-repo/doc-summarizer:$SHORT_SHA'
+  - '-f'
+  - 'backend/Dockerfile'
+  - 'backend/'
 - name: 'gcr.io/cloud-builders/docker'
   args:
-    [
-      'push',
-      'us-central1-docker.pkg.dev/$PROJECT_ID/doc-repo/doc-summarizer'
-    ]
+  - push
+  - 'us-central1-docker.pkg.dev/$PROJECT_ID/doc-repo/doc-summarizer:$SHORT_SHA'
 
-# 3) Deploy lên Cloud Run
+# deploy lên Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  entrypoint: 'bash'
+  entrypoint: gcloud
   args:
-    - '-c'
-    - |
-      gcloud run deploy doc-summarizer \
-        --image us-central1-docker.pkg.dev/$PROJECT_ID/doc-repo/doc-summarizer \
-        --region us-central1 \
-        --platform managed \
-        --allow-unauthenticated \
-        --service-account gemini-summarizer-sa@rare-origin-458408-r0.iam.gserviceaccount.com \
-        --set-env-vars GOOGLE_API_KEY=$$GOOGLE_API_KEY,GEMINI_MODEL=$$GEMINI_MODEL
+  - run
+  - deploy
+  - doc-summarizer
+  - --image=us-central1-docker.pkg.dev/$PROJECT_ID/doc-repo/doc-summarizer:$SHORT_SHA
+  - --region=us-central1
+  - --platform=managed
+  - --allow-unauthenticated
 
 
 # Khai báo image để Cloud Build “đánh dấu” thành artifact
