--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,4 +13,4 @@ COPY . .
 EXPOSE 8080
 
 # shell form để $PORT expand
-CMD uvicorn app:app --host 0.0.0.0 --port $PORT
+CMD ["sh", "-c", "uvicorn app:app --host 0.0.0.0 --port $PORT"]
