--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,8 @@
 FROM python:3.11-slim
 
+# set a more predictable Python environment
+ENV PYTHONUNBUFFERED=1
+
 WORKDIR /app
 
 
@@ -9,8 +12,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-# Cloud Run injects PORT env (mặc định 8080)
+# tell Cloud Run which port to listen on
+ENV PORT=8080
 EXPOSE 8080
 
-# shell form để $PORT expand
-CMD ["sh", "-c", "uvicorn app:app --host 0.0.0.0 --port $PORT"]
+# run Uvicorn on 0.0.0.0:8080
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8080"]
