--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.115.12
 uvicorn[standard]==0.34.2
-google-ai-generativelanguage>=0.6.18
+google-genai==0.8.0
 pdfminer.six==20250506
 python-docx==1.1.2
 python-multipart==0.0.20
+python-dotenv==1.1.0
