--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,19 +1,7 @@
-
 FROM python:3.11-slim
-
-
-ENV PYTHONUNBUFFERED=1
-
 WORKDIR /app
-
-
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-
-
 COPY . .
-
-
-
 EXPOSE 8080
-CMD ["sh", "-c", "uvicorn app:app --host 0.0.0.0 --port $PORT"]
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8080"]
