--- a/frontend/app/pubspec.yaml
+++ b/frontend/app/pubspec.yaml
@@ -7,6 +7,10 @@ version: 1.0.0+1
 environment:
   sdk: ">=3.1.0 <4.0.0"
 
+flutter:
+  uses-material-design: true
+
+
 dependencies:
   flutter:
     sdk: flutter
@@ -14,6 +18,9 @@ dependencies:
   permission_handler: ^11.3.1
   device_info_plus: ^9.1.1
   share_plus: ^7.2.1 
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.19.0
 
   # CORE FLUTTER DEPENDENCIES
   cupertino_icons: ^1.0.2
@@ -23,11 +30,20 @@ dependencies:
   file_picker: ^10.1.9
   path_provider: ^2.1.2
   open_file: ^3.3.2
+  image_picker: ^1.0.4
+  google_fonts: ^6.1.0
+  provider: ^6.1.2
+  lottie: ^3.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
-flutter:
-  uses-material-design: true
+
+
+flutter_launcher_icons:
+  android: true
+  image_path: "assets/icon/icon_app.png"
+
